[package]
name = "paramp"
version = "1.3.0"
authors = ["cetra3 <peter@parashift.com.au>"]

[dependencies]
zip = "*"
yaml-rust = "*"
clap = "*"
reqwest = "*"
hyper = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
semver = "*"
regex = "*"
lazy_static = "*"
memmap = "*"
rayon = "*"
